modified the Key insights KPI and added a clickable link to the HMDA logo

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 
         <div class="logo-container row">
-            <img class="humdah-logo" src="https://uc.uxpin.com/files/693662/685488/image-443236.png" alt="humdah bird">
-            <div class="logo-name">humdah</div>
+            <a href="index.html"><img class="humdah-logo" src="https://uc.uxpin.com/files/693662/685488/image-443236.png" alt="humdah bird" ></a>
+            <div class="logo-name"><a href="index.html">humdah</a></div>
             <div class="right-nav">
                 <p class="site-description">CFPB Home Mortgage Disclosure Act Insights</p>
             </div>
@@ -378,7 +378,8 @@
     <!--    FOOOTER     -->
 
     <footer>
-        <p>Thinkful API Capstone Project </p>
+        <p>Thinkful API Capstone Project</p>
+        <p>This project was developed for a programming course and the data insights have not been audited for accuracy.</p>
     </footer>
 
 
