--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="insights-container row" id="humdah-insights">
 
         <!--HDMA Filter Container-->
-             <div class="col-3">
+        <div class="col-3">
             <form action="" method="get" class="hmda-form" id="hmda_form" role="form" novalidate>
 
                 <!--STATE DATA -->
@@ -193,6 +193,7 @@
 
             **************************************-->
 
+        <!--Dynamic spinner if no data returns from the API-->
         <div class="spinner-title" role="alertdialog">
         </div>
 
@@ -316,9 +317,9 @@
 
     <!--    FOOOTER     -->
 
-    <footer>
-        <p>Thinkful API Capstone Project</p>
-        <p>This project was developed for a programming course and the data insights have not been audited for accuracy.</p>
+    <footer role="footer">
+        <p class="footer-title">Thinkful API Capstone Project</p>
+        <p class="footer-description">This project was developed for a programming course and the data insights have not been audited for accuracy.</p>
     </footer>
 
 
